Fixed header, and combined the corresponding JS files into one

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-columns">
         <div class="footer-seal-section">
-            <img src="/GATES-Website-Aug-4/images/ph-seal.png" alt="ph-seal" />
+            <img src="../images/ph-seal.png" alt="ph-seal" />
             <div>
                 <h4>REPUBLIC OF THE PHILIPPINES</h4>
                 <p>All content is in the public domain unless otherwise stated.</p>
