--- a/components/navbar.html
+++ b/components/navbar.html
@@ -34,26 +34,26 @@
                         <strong>About GATES</strong>
                         <p>about, gates, geospatial, analytics, technology</p>
                     </li>
-                    <li data-search="ai artificial intelligence machine learning" data-title="AI Technology"
+                    <li data-search="ai artificial intelligence machine learning christopher belaos jasper adrian dwight castro alyssa patricia ocampo norbert john ibera" data-title="AI Team"
                         data-url="../html/ai.html">
-                        <strong>AI Technology</strong>
+                        <strong>AI Team</strong>
                         <p>ai, artificial, intelligence, machine, learning</p>
                     </li>
-                    <li data-search="platform technology system" data-title="Platform" data-url="../html/platform.html">
+                    <li data-search="platform technology website christine shamah cureg alaine richelle ramos mary jane alpad" data-title="Platform" data-url="../html/platform.html">
                         <strong>Platform</strong>
-                        <p>platform, technology, system</p>
+                        <p>platform, technology, website</p>
                     </li>
-                    <li data-search="lakehouse data warehouse analytics" data-title="Lakehouse"
+                    <li data-search="lakehouse data warehouse analytics jean jay quitayen ruben capuli" data-title="Lakehouse"
                         data-url="../html/lakehouse.html">
                         <strong>Lakehouse</strong>
                         <p>lakehouse, data, warehouse, analytics</p>
                     </li>
-                    <li data-search="management team leadership staff" data-title="Management"
+                    <li data-search="management team leadership staff john chris kwong chelsea rica abellana charmaine ann manalo" data-title="Management"
                         data-url="../html/management.html">
                         <strong>Management</strong>
                         <p>management, team, leadership, staff</p>
                     </li>
-                    <li data-search="interns students" data-title="Interns" data-url="../html/interns.html">
+                    <li data-search="interns students joshua bird" data-title="Interns" data-url="../html/interns.html">
                         <strong>Interns</strong>
                         <p>interns, students</p>
                     </li>
