--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,5 @@
 <footer>
+    
     <div class="footer-columns">
         <div class="footer-seal-section">
             <img src="../images/ph-seal.png" alt="ph-seal" />
@@ -11,20 +12,21 @@
             <h4>ABOUT GOVPH</h4>
             <p>Learn more about the Philippine government, its structure, how government works and the people behind
                 it.</p>
-            <p><br><a href = "http://www.gov.ph/" target = "_blank">GOV.PH</a>
-                <br><a href = "http://www.gov.ph/data" target = "_blank">Open Data Portal</a>
-                <br><a href = "http://www.officialgazette.gov.ph/" target = "_blank">Official Gazette</a></p>
+            <p><br><a href="http://www.gov.ph/" target="_blank">GOV.PH</a>
+                <br><a href="http://www.gov.ph/data" target="_blank">Open Data Portal</a>
+                <br><a href="http://www.officialgazette.gov.ph/" target="_blank">Official Gazette</a>
+            </p>
         </div>
         <div>
             <h4>GOVERNMENT LINKS</h4>
             <ul>
-                <li><a href = "http://president.gov.ph/" target = "_blank">Office of the President</a></li>
-                <li><a href ="http://ovp.gov.ph/" target = "_blank">Office of the Vice President</a></li>
-                <li><a href = "http://www.senate.gov.ph/" target = "_blank">Senate of the Philippines</a></li>
-                <li><a href = "http://www.congress.gov.ph/" target = "_blank">House of Representatives</a></li>
-                <li><a href = "http://sc.judiciary.gov.ph/" target = "_blank">Supreme Court</a></li>
-                <li><a href = "http://ca.judiciary.gov.ph/" target = "_blank">Court of Appeals</a></li>
-                <li><a href = "http://sb.judiciary.gov.ph/" target = "_blank">Sandiganbayan</a></li>
+                <li><a href="http://president.gov.ph/" target="_blank">Office of the President</a></li>
+                <li><a href="http://ovp.gov.ph/" target="_blank">Office of the Vice President</a></li>
+                <li><a href="http://www.senate.gov.ph/" target="_blank">Senate of the Philippines</a></li>
+                <li><a href="http://www.congress.gov.ph/" target="_blank">House of Representatives</a></li>
+                <li><a href="http://sc.judiciary.gov.ph/" target="_blank">Supreme Court</a></li>
+                <li><a href="http://ca.judiciary.gov.ph/" target="_blank">Court of Appeals</a></li>
+                <li><a href="http://sb.judiciary.gov.ph/" target="_blank">Sandiganbayan</a></li>
             </ul>
         </div>
     </div>
