Updated incorrect links for deployment

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,7 +10,7 @@
             <li><a href="../asti-gates-profile.github.io/index.html">Home</a></li>
             <li><a href="../asti-gates-profile.github.io/html/mission-vision.html">Mission & Vision</a></li>
             <li><a href="../asti-gates-profile.github.io/html/about-gates.html">About Gates</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/Contact-Us.html">Contact Us</a></li>
+            <li><a href="../asti-gates-profile.github.io/html/contact-us.html">Contact Us</a></li>
 
             <div class="search-container">
                 <input id="searchInput" type="text" placeholder="Search..." autocomplete="off">
