Troubleshooting links (our team)

--- a/components/footer.html
+++ b/components/footer.html
@@ -2,7 +2,7 @@
     
     <div class="footer-columns">
         <div class="footer-seal-section">
-            <img src="../asti-gates-profile.github.io/images/ph-seal.png" alt="ph-seal" />
+            <img src="/images/ph-seal.png" alt="ph-seal" />
             <div>
                 <h4>REPUBLIC OF THE PHILIPPINES</h4>
                 <p>All content is in the public domain unless otherwise stated.</p>
