--- a/components/navbar.html
+++ b/components/navbar.html
@@ -8,9 +8,9 @@
     <nav>
         <ul>
             <li><a href="../asti-gates-profile.github.io/index.html">Home</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/mission-vision.html">Mission & Vision</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/about-gates.html">About Gates</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/contact-us.html">Contact Us</a></li>
+            <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
+            <li><a href="../html/about-gates.html">About Gates</a></li>
+            <li><a href="../html/contact-us.html">Contact Us</a></li>
 
             <div class="search-container">
                 <input id="searchInput" type="text" placeholder="Search..." autocomplete="off">
