--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,16 +1,16 @@
 <header class="navbar">
     <div class="logo">
-        <a href="../asti-gates-profile.github.io/index.html">
-            <img src="../asti-gates-profile.github.io/images/logo.png" alt="DOST-ASTI Logo" />
+        <a href="../index.html">
+            <img src="..images/logo.png" alt="DOST-ASTI Logo" />
             <span>DOST - ASTI</span>
         </a>
     </div>
     <nav>
         <ul>
-            <li><a href="../asti-gates-profile.github.io/index.html">Home</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/mission-vision.html">Mission & Vision</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/about-gates.html">About Gates</a></li>
-            <li><a href="../asti-gates-profile.github.io/html/contact-us.html">Contact Us</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../html/mission-vision.html">Mission & Vision</a></li>
+            <li><a href="../html/about-gates.html">About Gates</a></li>
+            <li><a href="../html/contact-us.html">Contact Us</a></li>
 
             <div class="search-container">
                 <input id="searchInput" type="text" placeholder="Search..." autocomplete="off">
