--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,7 +1,7 @@
 <header class="navbar">
     <div class="logo">
         <a href="../index.html">
-            <img src="/components/logo.png" alt="DOST-ASTI Logo" />
+            <img src="/asti-gates-profile.github.io/components/logo.png" alt="DOST-ASTI Logo" />
             <span>DOST - ASTI</span>
         </a>
     </div>
