--- a/css/about-gates.css
+++ b/css/about-gates.css
@@ -7,16 +7,12 @@
     padding: 0;
 }
 
-
-
 body {
     font-family: 'Open Sans Condensed', sans-serif;
     font-weight: 700;
     letter-spacing: 0.3px;
 }
 
-
-/* About Section */
 .about {
     padding: 30px 0 30px;
     text-align: center;
@@ -55,8 +51,6 @@ body {
     bottom: 0;
 }
 
-/* Removed the media query since we're using full width now */
-
 .about p {
     font-size: 1.1rem;
     line-height: 1.8;
@@ -68,11 +62,10 @@ body {
     padding: 0 30px;
 }
 
-/* Team Cards Section */
 .team {
     padding: 50px 30px;
     text-align: center;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
 }
 
 .team h2 {
@@ -116,10 +109,8 @@ body {
     bottom: 0;
     border-radius: 16px;
     pointer-events: none;
-    /* This allows clicks to pass through to the card */
     transition: opacity 0.3s ease;
     z-index: 1;
-    /* This ensures the overlay is below the button */
 }
 
 .card:hover {
@@ -129,7 +120,6 @@ body {
 
 .card:hover::before {
     opacity: 0.7;
-    /* Increase opacity on hover */
 }
 
 .card button {
@@ -145,7 +135,6 @@ body {
     transition: all 0.3s ease;
     position: relative;
     z-index: 2;
-    /* This makes the button appear above the overlay */
 }
 
 .card:hover button {
@@ -153,14 +142,12 @@ body {
     color: #1c1d25;
 }
 
-/* Background images and overlay colors */
 .card.management {
     background-image: url('../images/management.jpg');
 }
 
 .card.management::before {
     background-color: rgba(0, 105, 255, 0.5);
-    /* Blue overlay */
 }
 
 .card.platform {
@@ -169,7 +156,6 @@ body {
 
 .card.platform::before {
     background-color: rgba(0, 31, 84, 0.5);
-    /* Dark blue overlay */
 }
 
 .card.ai {
@@ -178,7 +164,6 @@ body {
 
 .card.ai::before {
     background-color: rgba(255, 215, 0, 0.5);
-    /* Yellow overlay */
 }
 
 .card.lakehouse {
@@ -187,12 +172,10 @@ body {
 
 .card.lakehouse::before {
     background-color: rgba(255, 59, 48, 0.5);
-    /* Red overlay */
 }
 
 .card.interns::before {
     background-color: rgba(225, 149, 9, 0.374);
-    /* light-blue overlay */
 }
 
 .card.interns {
