Updated team descriptions and added some incomplete info for staff profiles

--- a/css/Contact-Us-style.css
+++ b/css/Contact-Us-style.css
@@ -401,3 +401,12 @@
 .contact-table {
   margin: 0 auto;
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
