Fixed hover effect in contact page

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -52,7 +52,7 @@
                         <strong>Management</strong>
                         <p>management, team, leadership, staff</p>
                     </li>
-                    <li data-search="interns students joshua birad" data-title="Interns" data-url="../html/interns.html">
+                    <li data-search="interns students joshua birad matthew ormilon janelle lam pauline young nathan lim" data-title="Interns" data-url="../html/interns.html">
                         <strong>Interns</strong>
                         <p>interns, students</p>
                     </li>
