--- a/css/Contact-Us-style.css
+++ b/css/Contact-Us-style.css
@@ -402,11 +402,11 @@
   margin: 0 auto;
 }
 
-a {
+.email-link {
   color: black;
   text-decoration: none;
 }
 
-a:hover {
+.email-link:hover {
   text-decoration: underline;
 }
